--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
 cctv1,https://node1.olelive.com:6443/live/CCTV1HD/hls.m3u8
+cctv13,http://120.233.184.248/sx.v.smtcdns.net/hlslive-tx-cdn.ysp.cctv.cn/ysp/2022575703.m3u8
